<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="divide">/</string>
    <string name="Percent">%</string>
    <string name="All_Clear">AC</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="multiply">x</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="addition">+</string>
    <string name="numberZero">0</string>
    <string name="point"><b>.</b></string>
    <string name="Equal">=</string>
    <string name="subtract">-</string>
</resources>